@@ -1,6 +1,5 @@
 S3method("-",popgraph)
 export(as.popgraph)
-export(bootstrap_popgraph)
 export(centroid_distance)
 export(centroid_variance)
 export(congruence_topology)
@@ -8,6 +7,7 @@ export(decorate_graph)
 export(geom_edgeset)
 export(geom_nodeset)
 export(overlay_popgraph)
+export(permute_popgraph)
 export(popgraph)
 export(read.popgraph)
 export(test_congruence)
@@ -20,10 +20,11 @@ export(to_json)
 export(to_kml)
 export(to_matrix)
 export(to_pgraph)
-export(write.popgraph)
+export(write_popgraph)
 import(Matrix)
 import(ggplot2)
 import(igraph)
+import(sampling)
 importFrom(sp,Line)
 importFrom(sp,Lines)
 importFrom(sp,SpatialLines)
